--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  color: white;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -14,3 +15,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+.btn-primary {
+	color: #fff !important;
+	background-color: #5c1cff !important; /*WareWeb color*/
+	border-color: #5c1cff !important;
+}
+
